--- a/index.html
+++ b/index.html
@@ -3,110 +3,78 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Okcan Yasin Saygılı - Academic Profile</title>
-  <style>
-    body {
-      font-family: "Segoe UI", sans-serif;
-      margin: 0;
-      padding: 0;
-      line-height: 1.6;
-      background: #f5f7fa;
-      color: #333;
-    }
-    header {
-      background: #003366;
-      color: #fff;
-      padding: 40px 20px;
-      text-align: center;
-    }
-    header img {
-      border-radius: 50%;
-      width: 120px;
-      height: 120px;
-      margin-bottom: 10px;
-    }
-    nav {
-      margin-top: 20px;
-    }
-    nav a {
-      color: #fff;
-      margin: 0 10px;
-      text-decoration: none;
-      font-weight: bold;
-    }
-    section {
-      padding: 40px 20px;
-      max-width: 800px;
-      margin: auto;
-    }
-    h2 {
-      color: #003366;
-    }
-    footer {
-      text-align: center;
-      padding: 20px;
-      background: #e0e0e0;
-    }
-    .icons a {
-      margin: 0 10px;
-      text-decoration: none;
-      color: #003366;
-      font-size: 24px;
-    }
-  </style>
+  <title>DevOps / SRE Portfolio</title>
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
-  <header>
-    <img src="https://via.placeholder.com/120" alt="Profile photo" />
-    <h1>Dr. Okcan Yasin Saygılı</h1>
-    <p>Researcher in AI, Blockchain, and Cloud Infrastructure</p>
-    <nav>
-      <a href="#about">About</a>
-      <a href="#research">Research</a>
-      <a href="#publications">Publications</a>
-      <a href="#contact">Contact</a>
-    </nav>
+<body class="bg-gray-50 text-gray-800 font-sans">
+
+  <!-- Header -->
+  <header class="text-center py-10 bg-white shadow">
+    <h1 class="text-4xl font-bold">Ebru Saygılı</h1>
+    <p class="text-lg text-gray-600">DevOps Engineer • Site Reliability Engineer • Cloud Automation</p>
   </header>
 
-  <section id="about">
-    <h2>About Me</h2>
-    <p>
-      I am an academic researcher focused on the intersection of Artificial Intelligence, Blockchain technologies, and Cloud Infrastructure. I have published research in these domains and contributed to open-source projects on GitHub.
+  <!-- About -->
+  <section class="max-w-4xl mx-auto px-4 py-10">
+    <h2 class="text-2xl font-semibold mb-4">🧠 About Me</h2>
+    <p class="text-gray-700 leading-relaxed">
+      I am a DevOps/Site Reliability Engineer with experience in automating infrastructure, improving deployment pipelines, and ensuring system reliability. My work blends academic research in cloud computing with hands-on engineering using Kubernetes, Terraform, and CI/CD tools.
     </p>
   </section>
 
-  <section id="research">
-    <h2>Research Interests</h2>
-    <ul>
-      <li>Cloud Security Automation</li>
-      <li>Decentralized Identity (DID) Systems</li>
-      <li>AI-Powered Infrastructure Orchestration</li>
-      <li>Smart Contracts & Ethereum</li>
-    </ul>
-  </section>
-
-  <section id="publications">
-    <h2>Publications</h2>
-    <p>Here are some selected publications:</p>
-    <ul>
-      <li>Saygılı, O.Y. (2024). <i>AI-driven Infrastructure for Blockchain Systems</i>, Journal of Emerging Tech.</li>
-      <li>Saygılı, O.Y. (2023). <i>Comparative Analysis of Infrastructure Automation</i>, CloudConf.</li>
-    </ul>
-  </section>
-
-  <section id="contact">
-    <h2>Contact</h2>
-    <p>Email: okcan.saygili@example.com</p>
-    <p>GitHub: <a href="https://github.com/okcan" target="_blank">github.com/okcan</a></p>
-    <div class="icons">
-      <a href="https://linkedin.com/in/okcan" target="_blank">🔗</a>
-      <a href="mailto:okcan.saygili@example.com">✉️</a>
-      <a href="https://scholar.google.com/citations?user=XXXX" target="_blank">📖</a>
+  <!-- Skills -->
+  <section class="bg-white py-10">
+    <div class="max-w-4xl mx-auto px-4">
+      <h2 class="text-2xl font-semibold mb-4">⚙️ Skills & Tools</h2>
+      <div class="grid grid-cols-2 md:grid-cols-3 gap-4 text-gray-700">
+        <span>Terraform</span>
+        <span>Kubernetes</span>
+        <span>Docker</span>
+        <span>Ansible</span>
+        <span>Helm</span>
+        <span>GitHub Actions</span>
+        <span>AWS / GCP</span>
+        <span>Linux</span>
+        <span>Prometheus / Grafana</span>
+        <span>Python / Bash</span>
+        <span>CI/CD Pipelines</span>
+        <span>Monitoring & Logging</span>
+      </div>
     </div>
   </section>
 
-  <footer>
-    &copy; 2025 Okcan Yasin Saygılı | Powered by GitHub Pages
+  <!-- Projects -->
+  <section class="max-w-4xl mx-auto px-4 py-10">
+    <h2 class="text-2xl font-semibold mb-4">📂 Selected Projects</h2>
+    <ul class="space-y-4">
+      <li>
+        <strong>☁️ Cloud Infra as Code</strong> — Modular AWS/GCP setup using Terraform with secured IAM, CI/CD, and monitoring.  
+        <a href="https://github.com/yourusername/cloud-infra" class="text-blue-600 underline">GitHub Repo</a>
+      </li>
+      <li>
+        <strong>🔍 Kubernetes Observability Stack</strong> — Helm chart setup with Prometheus, Loki, Grafana, and alert rules.  
+        <a href="https://github.com/yourusername/k8s-monitoring" class="text-blue-600 underline">GitHub Repo</a>
+      </li>
+      <li>
+        <strong>🔐 DevSecOps CI/CD Pipeline</strong> — Secure CI/CD flow with image scanning, policy enforcement, and auto-deploy.  
+        <a href="https://github.com/yourusername/devsecops-pipeline" class="text-blue-600 underline">GitHub Repo</a>
+      </li>
+    </ul>
+  </section>
+
+  <!-- Contact -->
+  <section class="bg-white py-10">
+    <div class="max-w-4xl mx-auto px-4 text-center">
+      <h2 class="text-2xl font-semibold mb-4">📬 Contact</h2>
+      <p>Email: <a href="mailto:you@example.com" class="text-blue-600">you@example.com</a></p>
+      <p>GitHub: <a href="https://github.com/yourusername" class="text-blue-600">github.com/yourusername</a></p>
+      <p>LinkedIn: <a href="https://linkedin.com/in/yourusername" class="text-blue-600">linkedin.com/in/yourusername</a></p>
+    </div>
+  </section>
+
+  <!-- Footer -->
+  <footer class="text-center text-sm py-4 text-gray-500">
+    &copy; 2025 Ebru Saygılı. All rights reserved.
   </footer>
 </body>
 </html>
