--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
 
   <!-- Header -->
   <header class="text-center py-10 bg-white shadow">
-    <h1 class="text-4xl font-bold">Ebru Saygılı</h1>
-    <p class="text-lg text-gray-600">DevOps Engineer • Site Reliability Engineer • Cloud Automation</p>
+    <h1 class="text-4xl font-bold">Yasin Saygılı</h1>
+    <p class="text-lg text-gray-600">DevOps Engineer • Site Reliability Engineer • Software Developer</p>
   </header>
 
   <!-- About -->
   <section class="max-w-4xl mx-auto px-4 py-10">
     <h2 class="text-2xl font-semibold mb-4">🧠 About Me</h2>
     <p class="text-gray-700 leading-relaxed">
-      I am a DevOps/Site Reliability Engineer with experience in automating infrastructure, improving deployment pipelines, and ensuring system reliability. My work blends academic research in cloud computing with hands-on engineering using Kubernetes, Terraform, and CI/CD tools.
+      I am a DevOps/Site Reliability Engineer/Software Engineer with experience in automating infrastructure, improving deployment pipelines, and ensuring system reliability. My work blends academic research in cloud computing with hands-on engineering using Kubernetes, Terraform, and CI/CD tools.
     </p>
   </section>
 
@@ -66,15 +66,14 @@
   <section class="bg-white py-10">
     <div class="max-w-4xl mx-auto px-4 text-center">
       <h2 class="text-2xl font-semibold mb-4">📬 Contact</h2>
-      <p>Email: <a href="mailto:you@example.com" class="text-blue-600">you@example.com</a></p>
-      <p>GitHub: <a href="https://github.com/yourusername" class="text-blue-600">github.com/yourusername</a></p>
-      <p>LinkedIn: <a href="https://linkedin.com/in/yourusername" class="text-blue-600">linkedin.com/in/yourusername</a></p>
+      <p>Email: <a href="mailto:you@example.com" class="text-blue-600">yasinsaygili33@gmail.com</a></p>
+      <p>GitHub: <a href="https://github.com/yourusername" class="text-blue-600">https://github.com/okcan</a></p>
     </div>
   </section>
 
   <!-- Footer -->
   <footer class="text-center text-sm py-4 text-gray-500">
-    &copy; 2025 Ebru Saygılı. All rights reserved.
+    &copy; 2025 Yasin Saygılı. All rights reserved.
   </footer>
 </body>
 </html>
