--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <!-- Header -->
   <header class="text-center py-10 bg-white shadow">
     <h1 class="text-4xl font-bold">Yasin Saygılı</h1>
-    <p class="text-lg text-gray-600">DevOps Engineer • Site Reliability Engineer • Software Developer</p>
+    <p class="text-lg text-gray-600">Certified DevOps Engineer • Site Reliability Engineer • Software Developer</p>
   </header>
 
   <!-- About -->
@@ -26,6 +26,18 @@
   <section class="bg-white py-10">
     <div class="max-w-4xl mx-auto px-4">
       <h2 class="text-2xl font-semibold mb-4">⚙️ Skills & Tools</h2>
+      <div class="grid grid-cols-2 md:grid-cols-3 gap-4 text-gray-700">
+        <span>Amazon - AWS Certified Solutions Architect - Professional (SAP)</span>
+        <span>Amazon - AWS Certified Solutions Architect - Associate (SAA)</span>
+        <span>Google - Professional Cloud Architect</span>
+        <span>Microsoft Certified: Azure Solutions Architect Expert</span>
+        <span>Linux Foundation: Expert Certified Kubernetes Application Developer (CKAD)</span>
+      </div>
+    </div>
+  </section>
+    <section class="bg-white py-10">
+    <div class="max-w-4xl mx-auto px-4">
+      <h2 class="text-2xl font-semibold mb-4">⚙️ Certifications</h2>
       <div class="grid grid-cols-2 md:grid-cols-3 gap-4 text-gray-700">
         <span>Terraform</span>
         <span>Kubernetes</span>
@@ -49,16 +61,19 @@
     <ul class="space-y-4">
       <li>
         <strong>☁️ Cloud Infra as Code</strong> — Modular AWS/GCP setup using Terraform with secured IAM, CI/CD, and monitoring.  
-        <a href="https://github.com/yourusername/cloud-infra" class="text-blue-600 underline">GitHub Repo</a>
+        <a href="https://github.com/okcan/AWS-Terraform-Modules-Projects" class="text-blue-600 underline">AWS Terraform Modules</a><br>
+        <a href="https://github.com/okcan/GCP-Terraform-Modules-Projects" class="text-blue-600 underline">GCP Terraform Modules</a><br>
+        <a href="https://github.com/okcan/Azure-Terraform-Modules-Projects" class="text-blue-600 underline">Azure Terraform Modules</a><br>
+        <a href="https://github.com/okcan/ansible" class="text-blue-600 underline">Ansible Modules</a><br>
       </li>
-      <li>
+<!--      <li>
         <strong>🔍 Kubernetes Observability Stack</strong> — Helm chart setup with Prometheus, Loki, Grafana, and alert rules.  
         <a href="https://github.com/yourusername/k8s-monitoring" class="text-blue-600 underline">GitHub Repo</a>
       </li>
       <li>
         <strong>🔐 DevSecOps CI/CD Pipeline</strong> — Secure CI/CD flow with image scanning, policy enforcement, and auto-deploy.  
         <a href="https://github.com/yourusername/devsecops-pipeline" class="text-blue-600 underline">GitHub Repo</a>
-      </li>
+      </li> -->
     </ul>
   </section>
 
