--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <h2 class="text-2xl font-semibold mb-4">📂 Selected Projects</h2>
     <ul class="space-y-4">
       <li>
-        <strong>☁️ Cloud Infra as Code</strong> — Modular AWS/GCP setup using Terraform with secured IAM, CI/CD, and monitoring.  
+        <strong>☁️ Cloud Infra as Code</strong> — Modular AWS/GCP setup using Terraform with secured IAM, CI/CD, and monitoring.  <br>
         <a href="https://github.com/okcan/AWS-Terraform-Modules-Projects" class="text-blue-600 underline">AWS Terraform Modules</a><br>
         <a href="https://github.com/okcan/GCP-Terraform-Modules-Projects" class="text-blue-600 underline">GCP Terraform Modules</a><br>
         <a href="https://github.com/okcan/Azure-Terraform-Modules-Projects" class="text-blue-600 underline">Azure Terraform Modules</a><br>
